deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
  namespace: test
  labels:
    app: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: mail-deliver-front
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
