Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  namespace: test
spec:
  selector: 
    app: angular
  ports:
  - protocol: TCP
    port: 80   # The port that the service is running on in the cluster
    targetPort: 80   # The port exposed by the service
    nodePort: 31000
  type: NodePort     # type of the service.
